Copy edit to footer text

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <div class="container">
         <div id="footer-text-box-mobile">
-          <h2 class="footer-text" style="color:#2A2B2C">The Data Explorer was created by <a href="https://www.sosolimited.com/">Sosolimited</a>, an art, design, and technology studio and data visualization partner of the 2016 Design Census.</h2>
+          <h2 class="footer-text" style="color:#2A2B2C">The Data Explorer was created by <a href="https://www.sosolimited.com/">Sosolimited</a>, an interactive design studio and a data visualization partner of the 2016 Design Census.</h2>
         </div>
       </div>
 
@@ -96,7 +96,7 @@
 
   <div class="container">
     <div id="footer-text-box">
-      <h2 class="footer-text" style="color:#2A2B2C">The Data Explorer was created by <a href="https://www.sosolimited.com/">Sosolimited</a>, an art, design, and technology studio and data visualization partner of the 2016 Design Census.</h2>
+      <h2 class="footer-text" style="color:#2A2B2C">The Data Explorer was created by <a href="https://www.sosolimited.com/">Sosolimited</a>, an interactive design studio and a data visualization partner of the 2016 Design Census.</h2>
     </div>
   </div>
 
